--- a/src/wdc22/About.css
+++ b/src/wdc22/About.css
@@ -1,129 +1,277 @@
-.abt-c {
-    margin-bottom: 600px;
-}
+@media screen and (max-width: 1200px){
+    .abt-c {
+        padding: 20px;
+        margin: 0;
+        padding-bottom: 0;
+    }
 
-.about {
-    position: relative;
-}
+    .about {
+        position: relative;
+        padding: 0;
+        margin: 0;
+    }
 
-.about-info {
-    position: absolute;
-    background: #F8ECE0;
-    border: 4px solid #354563;
-    box-sizing: border-box;
-    border-radius: 10px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 18px;
-    padding-bottom: 20px;
-    margin-left: 115px;
-    margin-right: 115px;
-    margin-bottom: 20px;
-}
+    .about-info {
+        position: relative;
+        background: #F8ECE0;
+        border: 2px solid #354563;
+        box-sizing: border-box;
+        border-radius: 2px;
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-top: 19px;
+        padding-bottom: 18px;
+        margin: 40px;
+    }
 
-.about-text-desc {
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 36px;
+    .about-header {
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 27px;
+    }
+
+    .about-desc {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 21px;
+        color: #000000;
+    }
+
+    .tree {
+        position: absolute;
+        left: 5%;
+        top: 0px;
+        margin: 0;
+        padding: 0; 
+        width: 48px;
+    }
+
+    .about-cloud {
+        position: absolute;
+        left: 0%;
+        bottom: -5%;
+        width: 115px;
+    } 
+
+    .about-prompt {
+        position: relative;
+        padding: 0;
+    }
     
-    color: #000000;
-    margin-top: 0;
+    .prompt-dec {
+        position: absolute;
+        top: -24px;
+        left: 0;
+        width: 40px;
+        z-index: 2;
+    }
+    
+    .prompt-dec-img {
+        width: 100%;
+    }
+
+    .rainbow {
+        visibility: hidden;
+        width: 0;
+        height: 0;
+    }
+
+    .rainbow-mobile {
+        z-index: 0;
+        visibility: visible;
+        position: absolute;
+        width: 70px;
+        top: 200px;
+        left: 350px;
+        visibility: hidden;
+        width: 0;
+    }
+    
+    .prompt-container {
+        z-index: 1;
+        background: #354563;
+        box-sizing: border-box;
+        border-radius: 4px;
+        padding: 10px;
+        padding-left: 20px;
+        padding-right: 20px;
+        width: fit-content;
+        position: relative;
+        margin: auto;
+    }
+    
+    .prompt-bold {
+        font-weight: 600;
+        font-size: 14.255px;
+        line-height: 21px;
+        color: #F8ECE0;
+    }
+    
+    .prompt {
+        font-weight: normal;
+        font-size: 14.255px;
+        line-height: 21px;
+        color: #F8ECE0;
+        margin-left: auto;
+    }
+    
+    .prompt-light {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 21px;
+        color: #354563;
+        max-width: 310px;
+        margin: auto;
+        margin-top: 20px;
+    }
+    
+    .about-prompt-c {
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .water-drops {
+        width: 34px;
+        position: absolute;
+        right: 1%;
+        top: 90%;
+    }
 }
 
-.tree {
-    position: absolute;
-    left: 10%;
-    transform: translate(20%, -80%);   
-    margin: 0;
-    padding: 0; 
+@media screen and (min-width: 1200px){
+    .abt-c {
+        margin-bottom: 600px;
+    }
+    
+    .about {
+        position: relative;
+    }
+    
+    .about-info {
+        position: absolute;
+        background: #F8ECE0;
+        border: 4px solid #354563;
+        box-sizing: border-box;
+        border-radius: 10px;
+        padding-left: 40px;
+        padding-right: 40px;
+        padding-top: 18px;
+        padding-bottom: 20px;
+        margin-left: 115px;
+        margin-right: 115px;
+        margin-bottom: 20px;
+    }
+    
+    .about-text-desc {
+        font-weight: normal;
+        font-size: 24px;
+        line-height: 36px;
+        
+        color: #000000;
+        margin-top: 0;
+    }
+    
+    .tree {
+        position: absolute;
+        left: 10%;
+        transform: translate(20%, -80%);   
+        margin: 0;
+        padding: 0; 
+    }
+    
+    .about-cloud {
+        position: absolute;
+        left: 0;
+        top: 0;
+        transform: translate(20%, 230%);
+    }
+    
+    .about-prompt {
+        position: relative;
+        align-items: left;
+    }
+    
+    .prompt-dec {
+        position: absolute;
+        top: -30%;
+        left: -5%;
+        z-index: 2;
+    }
+    
+    .prompt-dec-img {
+        width: 100%;
+    }
+    
+    .prompt-container {
+        z-index: 1;
+        position: absolute;
+        top: 320px;
+        right: 250px;
+        background: #354563;
+        border: 4px solid #354563;
+        box-sizing: border-box;
+        border-radius: 10px;
+        padding-left: 46px;
+        padding-right: 46px;
+        padding-top: 29px;
+        padding-bottom: 23.91px;
+        margin-left: 20px;
+        margin-bottom: 0px;
+    }
+    
+    
+    .prompt-bold {
+        font-weight: 600;
+        font-size: 36px;
+        line-height: 54px;
+        color: #F8ECE0;
+    }
+    
+    .prompt {
+        font-weight: normal;
+        font-size: 36px;
+        line-height: 54px;
+        color: #F8ECE0;
+        margin-left: auto;
+    }
+    
+    .prompt-light {
+        font-weight: normal;
+        font-size: 24px;
+        line-height: 36px;
+        color: #354563;
+        max-width: 770px;
+    
+        position: absolute;
+        top: 450px;
+        right: 270px;
+    }
+    
+    .rainbow {
+        position: absolute;
+        /* top: 130px;
+        right: 150px; */
+        top: 100%;
+        right: 13%;
+        transform: translate(0%, 45%);
+    }
+
+    .rainbow-mobile {
+        visibility: hidden;
+        width: 0;
+    }
+    
+    .about-prompt-c {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .water-drops {
+        position: absolute;
+        top: 100%;
+        right: 10%;
+        transform: translate(0%, 400%);
+    }
 }
 
-.about-cloud {
-    position: absolute;
-    left: 0;
-    top: 0;
-    transform: translate(20%, 230%);
-}
-
-.about-prompt {
-    position: relative;
-    align-items: left;
-}
-
-.prompt-dec {
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    transform: translate(450%, 360%);
-    z-index: 2;
-}
-
-.prompt-dec-img {
-    width: 100%;
-}
-
-.prompt-container {
-    z-index: 1;
-    position: absolute;
-    top: 320px;
-    right: 250px;
-    background: #354563;
-    border: 4px solid #354563;
-    box-sizing: border-box;
-    border-radius: 10px;
-    padding-left: 46px;
-    padding-right: 46px;
-    padding-top: 29px;
-    padding-bottom: 23.91px;
-    margin-left: 20px;
-    margin-bottom: 0px;
-}
-
-
-.prompt-bold {
-    font-weight: 600;
-    font-size: 36px;
-    line-height: 54px;
-    color: #F8ECE0;
-}
-
-.prompt {
-    font-weight: normal;
-    font-size: 36px;
-    line-height: 54px;
-    color: #F8ECE0;
-    margin-left: auto;
-}
-
-.prompt-light {
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 36px;
-    color: #354563;
-    max-width: 770px;
-
-    position: absolute;
-    top: 450px;
-    right: 270px;
-}
-
-.rainbow {
-    position: absolute;
-    /* top: 130px;
-    right: 150px; */
-    top: 100%;
-    right: 13%;
-    transform: translate(0%, 45%);
-}
-
-.about-prompt-c {
-    display: flex;
-    flex-direction: column;
-}
-
-.water-drops {
-    position: absolute;
-    top: 100%;
-    right: 10%;
-    transform: translate(0%, 400%);
-}
